Add transform deps to fix illegal frame ref when accessing current colors